--- a/福利姬频道总目录/byoru全集/menu.html
+++ b/福利姬频道总目录/byoru全集/menu.html
@@ -50,7 +50,9 @@
   <p><a href="https://telegra.ph/Byoru-Luna-Moon-Festival-HD-Set-24P-179MB-08-23">Byoru Luna Moon Festival HD Set [24P-179MB]</a></p>  
   <p><a href="https://telegra.ph/Byoru-Leifang-Autumn-Festival-Mooncake-HD-30P-180MB-08-23">Byoru Leifang Autumn Festival Mooncake HD [30P-180MB]</a></p>
   <p><a href="https://telegra.ph/byoru-Ghislaine-38P7V-954MB-08-23">byoru Ghislaine [38P7V-954MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Byoru-Fubuki-08-24">Byoru Fubuki</a></p>
+  <p><a href="https://telegra.ph/byoru-Jackal-47P-252MB-08-24">byoru Jackal [47P-252MB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Yor-Forger-49P-194MB-08-24">byoru Yor Forger [49P-194MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
 </body>
