--- a/福利姬频道总目录/七七娜娜子全集/menu.html
+++ b/福利姬频道总目录/七七娜娜子全集/menu.html
@@ -11,6 +11,8 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B8%83%E4%B8%83%E5%A8%9C%E5%A8%9C%E5%AD%90-%E6%80%A8%E4%BB%87%E5%8A%9E%E5%85%AC%E5%AE%A4-42P1V-397MB-08-23">七七娜娜子 怨仇办公室 [42P1V-397MB]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-樫野牛牛女仆-42P7V-363MB-08-24">七七娜娜子 樫野牛牛女仆 [42P7V-363MB]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-久岐忍同人-41P9V-319MB-08-24">七七娜娜子 久岐忍同人 [41P9V-319MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
