--- a/福利姬频道总目录/九曲jean全集/menu.html
+++ b/福利姬频道总目录/九曲jean全集/menu.html
@@ -18,6 +18,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E5%A4%A9%E5%91%BD%E7%8C%AB%E8%80%B3%E6%9C%B5-21P-94MB-08-22">九曲Jean 天命猫耳朵 [21P-94MB]</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E6%99%9A%E5%AE%89%E4%BA%BA%E9%B1%BC-40P2V-08-22">九曲Jean 晚安人鱼 40P2V</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E9%BB%91%E5%85%BD%E6%9C%AC-67P-549MB-08-23">九曲Jean 黑兽本 [67P-549MB]</a></p>
+  <p><a href="https://telegra.ph/九言-冰淇淋-08-24">九言 冰淇淋</a></p>
+  <p><a href="https://telegra.ph/九言-拉毗-08-24">九言 拉毗</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
