--- a/福利姬频道总目录/宮本桜(宫本桜)全集/menu.html
+++ b/福利姬频道总目录/宮本桜(宫本桜)全集/menu.html
@@ -16,6 +16,8 @@
   <p><a href="https://telegra.ph/%E5%AE%AE%E6%9C%AC%E6%A1%9C-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-20P-08-21">宮本桜 碧蓝航线 恰巴耶夫 20P</a></p>
   <p><a href="https://telegra.ph/%E5%AE%AE%E6%9C%AC%E6%A1%9C-%E5%BE%B7%E5%85%8B%E8%90%A8%E6%96%AF%E5%90%8C%E4%BA%BA%E7%A4%BC%E6%9C%8D-23P-329MB-08-23">宮本桜 德克萨斯同人礼服 [23P-329MB]</a></p>
   <p><a href="https://telegra.ph/%E5%AE%AE%E6%9C%AC%E6%A1%9C-%E5%9F%83%E5%90%89%E5%B0%94%E6%97%97%E8%A2%8D-30P-376MB-08-23">宮本桜 埃吉尔旗袍 [30P-376MB]</a></p>
+  <p><a href="https://telegra.ph/宮本桜-明日方舟-鸿雪-18P-215MB-08-24">宮本桜 明日方舟 鸿雪 [18P-215MB]</a></p>
+  <p><a href="https://telegra.ph/宮本桜-NIKKE-胜利女神-海伦娜礼服-19P-176MB-08-24">宮本桜 NIKKE 胜利女神 海伦娜礼服 [19P-176MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
