--- a/福利姬频道总目录/水淼aqua全集/menu.html
+++ b/福利姬频道总目录/水淼aqua全集/menu.html
@@ -67,7 +67,11 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Fantia%E5%85%AD%E6%9C%88%E9%99%90%E5%AE%9A%E6%98%8E%E6%97%A5%E5%A5%88%E4%B8%A4%E5%A5%97-46P-55MB-08-23">水淼Aqua Fantia六月限定明日奈两套 [46P-55MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E8%99%8E%E7%BA%B9%E6%AF%94%E5%9F%BA%E5%B0%BC33P-38MB-08-23">水淼Aqua 虎纹比基尼[33P-38MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E8%B1%B9%E7%BA%B9%E5%85%94%E5%A5%B3%E9%83%8E37P-41MB-08-23">水淼Aqua 豹纹兔女郎[37P-41MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/水淼aqua-碧蓝档案-妃咲5月30打赏群自购资源-08-24">水淼aqua 碧蓝档案 妃咲（5月30打赏群自购资源）</a></p>
+  <p><a href="https://telegra.ph/水淼-一之濑明日奈5月16打赏群自购资源-08-24">水淼 一之濑明日奈（5月16打赏群自购资源）</a></p>
+  <p><a href="https://telegra.ph/水淼-凝光原造型62P4月30打赏群自购资源-08-24">水淼 凝光原造型[62P]（4月30打赏群自购资源）</a></p>
+  <p><a href="https://telegra.ph/水淼-北斗原造型70P4月30打赏群自购资源-08-24">水淼 北斗原造型[70P]（4月30打赏群自购资源）</a></p>
+  <p><a href="https://telegra.ph/水淼-拉毗4月16打赏群自购资源-08-24">水淼 拉毗（4月16打赏群自购资源）</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
