--- a/福利姬频道总目录/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
+++ b/福利姬频道总目录/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
@@ -55,10 +55,9 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81--%E5%B8%83%E6%9C%97%E5%B0%BC-08-23">布丁 Ⅵ 布朗尼</a></p>  
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-IV%E5%A5%A5%E5%88%A9%E5%A5%A549P3V---446MB-08-23">布丁大法 IV奥利奥[49P3V - 446MB]</a></p>  
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E7%8F%8A%E7%91%9A%E9%B8%A1%E5%B0%BE%E9%85%92-08-23">布丁 珊瑚鸡尾酒</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p> 
+  <p><a href="https://telegra.ph/布丁大法-你的小熊-08-24">布丁大法 你的小熊</a></p>
+  <p><a href="https://telegra.ph/布丁大法-S3糯米糕35P3V-242M-08-24">布丁大法 S3糯米糕[35P3V-242M]</a></p>
+  <p><a href="https://telegra.ph/布丁大法-C6热可可-08-24">布丁大法 C6热可可</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
