--- a/福利姬频道总目录/星之迟迟全集/menu.html
+++ b/福利姬频道总目录/星之迟迟全集/menu.html
@@ -93,16 +93,12 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-A-08-23">星之迟迟 2023-6-A</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-B-08-23">星之迟迟 2023-6-B</a></p>   
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-c-08-23">星之迟迟 2023-6-c</a></p>  
-  <p><a href="">星之</a></p> 
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p> 
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p> 
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p> 
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p> 
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p> 
+  <p><a href="https://telegra.ph/星之迟迟-08-24">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-2">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-3">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-4">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-5">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-6">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-7">星之迟迟</a></p>
 </body>
 </html>
