--- a/福利姬频道总目录/晓美嫣 妈妈子全集/menu.html
+++ b/福利姬频道总目录/晓美嫣 妈妈子全集/menu.html
@@ -12,6 +12,7 @@
  
   <p><a href="https://telegra.ph/%E5%A6%88%E5%A6%88%E5%AD%90-Blue-Archive---%E4%BC%8A%E8%90%BD%E3%83%9E%E3%83%AA%E3%83%BC%E4%BD%93%E6%93%8D%E6%9C%8Dcosplay-vol02-08-23">妈妈子 《Blue Archive - 伊落マリー（体操服）》cosplay vol.02</a></p>
   <p><a href="https://telegra.ph/%E6%99%93%E7%BE%8E%E5%AB%A3-%E5%A6%88%E5%A6%88%E5%AD%90-%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88-%E5%A6%83%E5%92%B2-70P-215MB-08-23">晓美嫣 妈妈子 碧蓝档案 妃咲 [70P-215MB]</a></p>
+  <p><a href="../index.html">晓美嫣 妈妈子 碧蓝档案 妃咲 [70P-215MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
