--- a/福利姬频道总目录/末夜787全集/menu.html
+++ b/福利姬频道总目录/末夜787全集/menu.html
@@ -18,5 +18,9 @@
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E8%88%B0%E9%95%BF-%E6%9F%B4%E9%83%A1%E6%B3%B3%E8%A3%85-31P-08-23">末夜787 舰长 柴郡泳装 31P</a></p>
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C-%E7%8C%AB%E5%A8%98%E8%A1%A3%E6%A9%B1-%E7%8F%8D%E7%8F%A0%E5%86%85%E8%A1%A336P2V-08-23">末夜 猫娘衣橱 珍珠内衣36P2V</a></p>
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C-%E7%89%B9%E5%88%AB%E7%9A%84%E5%AE%A0%E7%89%A9-08-23">末夜 特别的宠物</a></p>
+  <p><a href="https://telegra.ph/末夜787-机器人女友-08-24">末夜787 机器人女友</a></p>
+  <p><a href="https://telegra.ph/末夜787-白色泳装-08-24">末夜787 白色泳装</a></p>
+
+
 </body>
 </html>
