--- a/福利姬频道总目录/桜井宁宁全集/menu.html
+++ b/福利姬频道总目录/桜井宁宁全集/menu.html
@@ -62,6 +62,8 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E7%99%BD%E4%B8%9Djk-08-23">桜井宁宁 白丝jk</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E5%A6%83%E5%92%B2-40P-738M-08-23">桜井宁宁 妃咲 [40P-738M]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E5%B7%AB%E5%A5%B3-48P-117GB-08-23">桜井宁宁 巫女 [48P-1.17GB]</a></p>
+  <p><a href="https://telegra.ph/桜井宁宁-JK的秘密-83P-256GB-08-24">桜井宁宁 JK的秘密 83P 2.56GB</a></p>
+  <p><a href="https://telegra.ph/桜井宁宁-皮衣修女-08-24">桜井宁宁 皮衣修女</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
