--- a/福利姬频道总目录/神楽坂真冬全集/menu.html
+++ b/福利姬频道总目录/神楽坂真冬全集/menu.html
@@ -63,6 +63,10 @@
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC-%E8%9C%98%E8%9B%9B%E5%A5%B3%E5%AD%A9-75P-182MB-08-23">神楽坂真冬 蜘蛛女孩 [75P-182MB]</a></p>
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC-%E6%83%B3%E5%85%A5%E9%9D%9E%E9%9D%9E-75P-204MB-08-23">神楽坂真冬 想入非非 [75P-204MB]</a></p>
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC-%E7%BA%AF%E7%99%BD%E7%A5%88%E6%84%BF-75P-150MB-08-23">神楽坂真冬 纯白祈愿 [75P-150MB]</a></p>
+  <p><a href="https://telegra.ph/神楽坂真冬-波斯公主-08-24">神楽坂真冬 波斯公主</a></p>
+  <p><a href="https://telegra.ph/神楽坂真冬-昙花一现5月6打赏群资源-08-24">神楽坂真冬 昙花一现（5月6打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/神楽坂真冬-咒术人偶4月27打赏群资源-08-24">神楽坂真冬 咒术人偶（4月27打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/神楽坂真冬-第五季12-白夜礼赞3月26打赏群资源-08-24">神楽坂真冬 第五季12 白夜礼赞（3月26打赏群资源）</a></p>
   <p><a href="../index.html">神楽坂真冬 想入非非 [75P-204MB]</a></p>
   <p><a href="../index.html">神楽坂真冬 想入非非 [75P-204MB]</a></p>
   <p><a href="../index.html">神楽坂真冬 想入非非 [75P-204MB]</a></p>
